# waivern-compliance

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  conftest.py  migration_notes.md  pyproject.toml  sample_file.txt  sample_runbook.yaml  setup.sh  wct.yaml
apps/wct/: .env.example  README.md  pyproject.toml  runbook.schema.json
apps/wct/runbooks/: README.md
apps/wct/runbooks/samples/: LAMP_stack.yaml  LAMP_stack_lite.yaml  data_subject_llm_validation.yaml  file_content_analysis.yaml  github.yaml  github_source_analysis.yaml  mongodb-personal-data.yaml  mongodb.yaml  service_integration_detection.yaml
apps/wct/scripts/: dev-checks.sh  format.sh  lint.sh  type-check.sh
apps/wct/src/wct/: __main__.py  cli.py  executor.py  llm_service.py  logging.py  metadata.py  organisation.py  runbook.py  utils.py
apps/wct/tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_cli.py  test_executor.py  test_executor_version_matching.py  test_logging.py  test_organisation.py  test_runbook.py  test_runbook_version_validation.py  test_utils.py
apps/wct/tests/analysers/: test_base_analyser_chain_logic.py  test_vendor_database_protection.py
apps/wct/tests/cli/: test_cli_e2e.py  test_cli_poll.py  test_cli_runs.py  test_formatting.py
apps/wct/tests/exporters/: conftest.py  test_core.py  test_json_exporter.py  test_registry.py
libs/waivern-analysers-shared/: README.md  pyproject.toml
libs/waivern-analysers-shared/docs/: ruleset-management.md
libs/waivern-analysers-shared/scripts/: dev-checks.sh  type-check.sh
libs/waivern-analysers-shared/tests/: conftest.py
libs/waivern-artifact-store/: README.md  pyproject.toml
libs/waivern-artifact-store/docs/: architecture.md  artifact-caching-and-external-sources.md
libs/waivern-artifact-store/scripts/: dev-checks.sh  format.sh  lint.sh
libs/waivern-artifact-store/tests/: __init__.py  conftest.py  test_list_runs.py
libs/waivern-community/: README.md  pyproject.toml
libs/waivern-community/scripts/: format.sh  lint.sh  type-check.sh
libs/waivern-community/tests/: conftest.py
libs/waivern-core/: README.md  pyproject.toml
libs/waivern-core/docs/: di-factory-patterns.md  processor-input-requirements.md
libs/waivern-core/scripts/: dev-checks.sh  type-check.sh
libs/waivern-core/tests/: conftest.py
libs/waivern-data-export-analyser/: README.md  pyproject.toml
libs/waivern-data-export-analyser/scripts/: dev-checks.sh
libs/waivern-data-export-analyser/tests/: conftest.py
libs/waivern-filesystem/: README.md  pyproject.toml
libs/waivern-filesystem/scripts/: dev-checks.sh
libs/waivern-filesystem/tests/: conftest.py
libs/waivern-gdpr-data-collection-classifier/: README.md  pyproject.toml
libs/waivern-gdpr-data-collection-classifier/scripts/: dev-checks.sh  format.sh  generate-schema.sh  lint.sh  type-check.sh
libs/waivern-gdpr-data-collection-classifier/tests/: conftest.py
libs/waivern-gdpr-processing-purpose-classifier/: README.md  pyproject.toml
libs/waivern-gdpr-processing-purpose-classifier/scripts/: dev-checks.sh  format.sh  generate-schema.sh  lint.sh  type-check.sh
libs/waivern-gdpr-processing-purpose-classifier/tests/: conftest.py
libs/waivern-iso27001-control-assessor/: README.md  pyproject.toml
libs/waivern-iso27001-control-assessor/scripts/: dev-checks.sh  format.sh  generate-schema.sh  lint.sh  type-check.sh
libs/waivern-iso27001-control-assessor/tests/: conftest.py
libs/waivern-llm/: README.md  pyproject.toml
libs/waivern-llm/scripts/: dev-checks.sh  type-check.sh
libs/waivern-llm/tests/: conftest.py
libs/waivern-mongodb/: README.md  pyproject.toml
libs/waivern-mongodb/scripts/: dev-checks.sh  format.sh  lint.sh  type-check.sh
libs/waivern-mongodb/tests/: conftest.py
libs/waivern-orchestration/: README.md  pyproject.toml
libs/waivern-orchestration/docs/: artifact-centric-orchestration.md  child-runbook-composition.md  runbook-format.md
libs/waivern-orchestration/scripts/: dev-checks.sh  format.sh  lint.sh  type-check.sh
libs/waivern-orchestration/tests/: conftest.py
libs/waivern-personal-data-analyser/: README.md  pyproject.toml
libs/waivern-personal-data-analyser/scripts/: dev-checks.sh  format.sh  generate-schema.sh  type-check.sh
libs/waivern-personal-data-analyser/tests/: conftest.py
libs/waivern-processing-purpose-analyser/: README.md  pyproject.toml
libs/waivern-processing-purpose-analyser/docs/: llm-validation-sampling-strategy.md  sampling-implementation.md
libs/waivern-processing-purpose-analyser/scripts/: dev-checks.sh  generate-schema.sh
libs/waivern-processing-purpose-analyser/tests/: conftest.py
libs/waivern-rulesets/: README.md  pyproject.toml
libs/waivern-rulesets/scripts/: dev-checks.sh  format.sh  lint.sh  type-check.sh
libs/waivern-rulesets/tests/: conftest.py
libs/waivern-security-document-evidence-extractor/: README.md  pyproject.toml
libs/waivern-security-document-evidence-extractor/scripts/: dev-checks.sh  format.sh  generate-schema.sh  lint.sh  type-check.sh
libs/waivern-security-document-evidence-extractor/tests/: conftest.py
libs/waivern-service-integration-analyser/: README.md  pyproject.toml
libs/waivern-service-integration-analyser/scripts/: dev-checks.sh  format.sh  generate-schema.sh  lint.sh  type-check.sh
libs/waivern-service-integration-analyser/tests/: conftest.py
libs/waivern-source-code-analyser/: README.md  pyproject.toml
libs/waivern-source-code-analyser/docs/: architecture.md  extending-languages.md
libs/waivern-source-code-analyser/scripts/: dev-checks.sh  generate-schema.sh
libs/waivern-source-code-analyser/tests/: conftest.py
libs/waivern-sqlite/: README.md  pyproject.toml
libs/waivern-sqlite/scripts/: dev-checks.sh
libs/waivern-sqlite/tests/: conftest.py
src/connectors/core/: README.md  pyproject.toml
src/connectors/source_code/: README.md  pyproject.toml
src/plugins/wordpress/: pyproject.toml
src/rulesets/core/: README.md  pyproject.toml
src/rulesets/wordpress/: README.md  pyproject.toml
(+1762 files in other folders)
