[tool.uv.workspace]
members = [
    "libs/waivern-core",
    "libs/waivern-llm",
    "libs/waivern-connectors-database",
    "libs/waivern-community",
    "apps/wct",
]

[tool.uv.sources]
waivern-core = { workspace = true }
waivern-llm = { workspace = true }
waivern-connectors-database = { workspace = true }
waivern-community = { workspace = true }
waivern-compliance-tool = { workspace = true }

[project]
name = "waivern-workspace"
version = "0.1.0"
description = "Waivern Compliance Framework workspace root"
requires-python = ">=3.12"
dependencies = [
    "waivern-compliance-tool",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
only-include = ["pyproject.toml"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.12",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "libs", "apps"]
xfail_strict = true
addopts = [
    # Allow test files to have the same name in different directories.
    # This is necessary because we have multiple packages in the workspace, each
    # with a `tests` directory.
    # See https://docs.pytest.org/en/stable/explanation/goodpractices.html#tests-outside-application-code
    "--import-mode=importlib",
    # Exclude integration tests by default (they require API keys and make real API calls)
    "-m", "not integration",
]
markers = [
    "integration: marks tests as integration tests requiring real API calls (deselect with '-m \"not integration\"')",
]
