[project]
name = "waivern-compliance-tool"
version = "0.1.0"
description = "Waivern Compliance Tool - a wrapper application that executes runbooks"
requires-python = ">=3.12"
dependencies = [
    "waivern-core",
    "annotated-types>=0.7.0",
    "jsonschema>=4.25.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.0.0",
    "typer>=0.16.0",
    "typing-extensions>=4.14.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "cryptography>=45.0.5",
    "pymysql>=1.1.1",
    "tree-sitter>=0.21.0",
    "tree-sitter-php>=0.22.0",
]

[project.scripts]
wct = "wct.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wct"]

[tool.ruff.lint.per-file-ignores]
# Connector constructors need many database/filesystem parameters
"src/wct/connectors/*/connector.py" = [
    "PLR0913",  # Too many arguments - acceptable for connector configuration
]
# Prompt functions legitimately need many string parameters
"src/wct/prompts/*.py" = [
    "PLR0913",  # Too many arguments - acceptable for prompt parameter functions
]
# Executor step analysis needs many orchestration parameters
"src/wct/executor.py" = [
    "PLR0913",  # Too many arguments - acceptable for analysis orchestration
]
