[project]
name = "waivern-community"
version = "0.1.0"
description = "Community-contributed connectors, analysers, and rulesets for Waivern Compliance Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "waivern-core",
    "waivern-llm",
    "waivern-connectors-database",
    "waivern-mysql",
    "waivern-filesystem",
    "waivern-sqlite",
    "waivern-source-code",
    "waivern-rulesets",
    "waivern-analysers-shared",
    "waivern-personal-data-analyser",
    "pyyaml>=6.0.2",
    "pydantic>=2.11.5",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
source-code = ["waivern-source-code[tree-sitter]"]
all = ["waivern-community[source-code]"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "ruff>=0.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

# Explicitly include JSON schema files in package distribution
# Includes schemas from connectors and analysers
include = [
    "src/waivern_community/**/*.py",
    "src/waivern_community/**/schemas/json_schemas/**/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/waivern_community"]

[tool.basedpyright]
typeCheckingMode = "strict"
reportImplicitOverride = "error"

# Relax type inference rules for tests while still catching real type errors
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportMissingParameterType = "none"
reportUnknownLambdaType = "none"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "D",      # pydocstyle
    "F",      # pyflakes
    "I",      # isort
    "PL",     # pylint
    "RUF100", # unused-noqa-directive
    "S",      # bandit
    "UP",     # pyupgrade
]
ignore = [
    "D203",    # incorrect-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN", # Type annotations - not required in tests
    "B", # flake8-bugbear - less strict in tests
    "D", # Documentation
    "S101", # Use of assert detected
    "PLC0415", # Import outside top-level - acceptable for checking optional dependencies
    "PLR2004", # Magic value used in comparison - acceptable in tests
]
# Connector constructors need many database/filesystem parameters
"src/waivern_community/connectors/*/connector.py" = [
    "PLR0913",  # Too many arguments - acceptable for connector configuration
]
# Prompt functions legitimately need many string parameters
"src/waivern_community/prompts/*.py" = [
    "PLR0913",  # Too many arguments - acceptable for prompt parameter functions
]
