[project]
name = "waivern-core"
version = "0.1.0"
description = "Core abstractions for Waivern Compliance Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "jsonschema>=4.25.0",
    "typing-extensions>=4.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waivern_core"]
